@@ -108,4 +108,5 @@
 2020-09-18 full_catering.backup added loss items and avery label as example insert for commercial barcode.
 2020-09-19 catering.py corrected type error in info
 2020-09-19 catering.py blocked payments after switching employee-clients and not yet logged on switched employee.
+2020-09-19 catering.py after switching employee-clients replacement emptying ordering display to avoid double payments
 
